Android Studio 格式化以及修复问题